--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.0.6",
     "@types/node": "22.13.1",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
@@ -17,6 +18,12 @@
     "next": "15.1.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "tailwindcss": "^4.0.6",
     "typescript": "5.7.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.2",
+    "sass": "^1.85.0"
   }
 }
