--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "19.0.3",
     "eslint": "9.20.1",
     "eslint-config-next": "15.1.7",
+    "firebase": "^11.3.1",
     "next": "15.1.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
