--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.1.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "swr": "^2.3.2",
     "tailwindcss": "^4.0.6",
     "typescript": "5.7.3"
   },
