--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "15.1.7",
     "firebase": "^11.3.1",
     "next": "15.1.7",
+    "next-auth": "^4.24.11",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "swr": "^2.3.2",
