--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "22.13.1",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
+    "bcrypt": "^5.1.1",
     "eslint": "9.20.1",
     "eslint-config-next": "15.1.7",
     "firebase": "^11.3.1",
@@ -25,6 +26,7 @@
     "typescript": "5.7.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.2",
     "sass": "^1.85.0"
